fixes text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -745,6 +745,7 @@ header .navbar .cta-btn a:hover {
 
 .section {
   padding: 7em 0;
+  overflow: hidden;
 }
 
 .section-subscribe {
